Consolidated surefire configs to root pom.